# Liggghts_VBP_VTKReader

./: .gitignore  .gitmodules  CMakeLists.txt  Liggghts_VBP_VTKReader.cxx  README.md  sph_gradient.py  validation.py  vel.py  veltime.py
include/: dirent.h
src/: Liggghts_VBP_VTKReader.cxx  bedHeight.h  bedLims.h  particle.cpp  particle.h  particleSearcher.cpp  particleSearcher.h  sphSpikyKernel.cpp  sphSpikyKernel.h  sphStdKernel.cpp  sphStdKernel.h  sphericalParticle.cpp  sphericalParticle.h  superquadricParticle.cpp  superquadricParticle.h
